code flaws fixies