@@ -1,11 +1,8 @@
 package org.papercloud.de.pdfsecurity.service;
 
-import java.util.stream.Collectors;
-
 import lombok.RequiredArgsConstructor;
 import org.papercloud.de.pdfdatabase.entity.UserEntity;
 import org.papercloud.de.pdfdatabase.repository.UserRepository;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -16,7 +13,6 @@ import org.springframework.stereotype.Service;
 @RequiredArgsConstructor
 public class PdfUserDetailsService implements UserDetailsService {
 
-  @Autowired
   private final UserRepository userRepository;
 
   @Override
@@ -32,7 +28,7 @@ public class PdfUserDetailsService implements UserDetailsService {
             true, true, true,
             user.getRoles().stream()
                     .map(role -> new SimpleGrantedAuthority(role.getName()))
-                    .collect(Collectors.toList())
+                    .toList()
     );
   }
 }
